<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SEO</groupId>
  <artifactId>SEO</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  	<properties>
		<spring.version>4.1.2.RELEASE</spring.version>
        <jdk.version>1.8</jdk.version>
  		<skipTests>true</skipTests>
	</properties>
	<profiles>
		<profile>
			<id>develop</id>
			<properties>
				<midl-core.version>develop-SNAPSHOT</midl-core.version>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<properties>
				<midl-core.version>2.0.1</midl-core.version>
			</properties>
		</profile>
	</profiles>
	<build>
		<finalName>seo</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<systemProperties>
						<JAVA_OPTS>-Xms256m -Xmx1024m
							-XX:MaxPermSize=256m</JAVA_OPTS>
					</systemProperties>
					<url>http://localhost:8080/manager/text</url>
					<server>TomcatServer</server>
					<path>/</path>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
				<version>2.17</version>
				<dependencies>
				</dependencies>
			</plugin>
		</plugins>
		<extensions>
			<extension>
				<groupId>org.springframework.build</groupId>
				<artifactId>aws-maven</artifactId>
				<version>5.0.0.RELEASE</version>
			</extension>
		</extensions>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.proptiger</groupId>
			<artifactId>midl-core</artifactId>
			<version>${midl-core.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.1.1</version>
<!-- 			<scope>test</scope>
 -->		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
<!-- 			<scope>test</scope>
 -->		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
<!-- 			<scope>test</scope>
 -->		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>project.local</id>
			<name>project</name>
			<url>file:${project.basedir}/repo</url>
		</repository>
		<repository>
			<id>proptiger-maven-repo</id>
			<name>S3 Release Repository</name>
			<url>s3://proptiger-maven-repo/release</url>
			<snapshots>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
</project>
